@@ -7,5 +7,5 @@ DIST nginx_mp4_streaming_public_20081229.tar.bz2 9469 RMD160 ec4c8a0ef86db6cf63f
 DIST ngx_http_auth_pam_module-1.1.tar.gz 5193 RMD160 38437a1f5d34f93b22abb9f0a7181be756356d33 SHA1 d04065a512169925dda8bce710e1dc5012cac47b SHA256 ea9da5f106b952729398248cddabbe25f7a5752993e91c9b8252dbc2b03b8ecd
 EBUILD nginx-0.8.21-r50.ebuild 4943 RMD160 e8cd81e06f7e1f6ea3c49786cce62b481455caa9 SHA1 3fe4c46fe0a7d891610690a375a44e9b8251387f SHA256 758d25db980a2c6b57382aa73943173e3ecda5410551f6a55f6ee232d59c3cb5
 EBUILD nginx-0.8.22-r50.ebuild 4943 RMD160 e8cd81e06f7e1f6ea3c49786cce62b481455caa9 SHA1 3fe4c46fe0a7d891610690a375a44e9b8251387f SHA256 758d25db980a2c6b57382aa73943173e3ecda5410551f6a55f6ee232d59c3cb5
-MISC ChangeLog 618 RMD160 437643caff59b7a4bb46fd653d4115739042861d SHA1 71e6b09f0513484fbfc61310fac39a8ef0049114 SHA256 7d63a8f3d6398fac091f9fcd85815cf38778d15a56ba0d395ea12c2fd37c03cd
+MISC ChangeLog 715 RMD160 a20e85efff2439df25f9c32437dce3088fd66560 SHA1 0eac909df0346ef8d38e2da8c50bee5e20972812 SHA256 dfae74337ea59f8375bb77412201e142874c69c8f2c1c4f144d0c910d8fcac67
 MISC metadata.xml 1338 RMD160 3586b779c10dab5eaacbef98ddbe23196a2de648 SHA1 31af3d4de39856167e0095230494b86d02416b48 SHA256 0e72f15f93867c9865c7a1360d1b32a94d0b59d60805b454184a78513d2c6148
