@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header:
 
+  10 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
+  +nginx-0.8.22-r50.ebuild:
+  version bump
+
   08 Nov 2009; <slep@gentoo.org> -nginx-0.8.20-r50.ebuild:
   remove old version
 
